--- a/src/styles.css
+++ b/src/styles.css
@@ -46,13 +46,14 @@
     justify-content: center;
     margin-bottom: 20px;
     margin-right: 20px;
+    max-width: 25rem;
     overflow: hidden;
   }
   
   .card p {
     background-color: white;
     flex: 1;
-    font-size: 1.5rem;
+    font-size: 1.125rem;
     margin-top: 5px;
     padding: 5px 20px 0px 20px;
     text-align: center;
